<resources>
    <string name="app_name">Egodawatta Gang Version 1.0</string>
    <string name="name">Name</string>
    <string name="member_id">Member ID</string>
    <string name="contact">Contact</string>
    <string name="send_updates">Send Updates</string>
    <string name="btnAddMember">Button</string>
    <string name="d_o_b">D.O.B</string>
    <string name="add_member">Add member</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="button">btnViewMembers</string>
    <string name="home_add_member">Add Member</string>
    <string name="lblAddUserMenu">TextView</string>
    <string name="label_add_member">Add Member</string>
    <string name="todo">TODO</string>
    <string name="lbl_sms">TextView</string>
    <string name="sms">SMS</string>

</resources>
