<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/holo_blue_dark"
    tools:context="com.cazzendra.official.apiv10.MainMenu">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="83dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        android:tint="@android:color/holo_red_light"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageButton"
        android:layout_marginStart="60dp"
        android:layout_marginTop="0dp"
        android:text="@string/label_add_member" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageButton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="85dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:contentDescription="@string/todo"
        android:tint="@android:color/holo_red_light"
        app:srcCompat="@android:drawable/ic_menu_mapmode" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageButton2"
        android:layout_alignStart="@+id/imageButton2"
        android:layout_below="@+id/imageButton2"
        android:text="@string/sms" />

</RelativeLayout>
